--- a/scss/components/component-facets.scss
+++ b/scss/components/component-facets.scss
@@ -1,3 +1,6 @@
+.overflow-hidden-mobile {
+  overflow: hidden;
+}
 .facets-container {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -13,7 +16,7 @@
   overflow-y: auto;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 767px) {
   .facets-container > * + * {
     margin-top: 0;
   }
@@ -36,12 +39,12 @@
   display: flex;
   grid-column: 2;
   grid-row: 1;
-  padding-left: 2.5rem;
+  padding-left: 0;
 }
 
 @media screen and (min-width: 990px) {
   .facet-filters {
-    padding-left: 3rem;
+    padding-left: 0;
   }
 }
 
@@ -49,6 +52,9 @@
   display: block;
   font-size: 1.4rem;
   margin: 0 2rem 0 0;
+  label {
+    margin-bottom: 0;
+  }
 }
 
 .facet-filters__summary {
@@ -101,7 +107,6 @@
 }
 
 
-
 @media screen and (forced-colors: active) {
   .facet-filters__sort {
     border: none;
@@ -136,8 +141,10 @@
 }
 
 .facets {
-  display: block;
+  display: flex;
   grid-column-start: span 2;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .facets__form {
@@ -158,8 +165,6 @@
 
 .facets__heading {
   display: block;
-  font-size: 1.4rem;
-  margin: -1.5rem 2rem 0 0;
 }
 
 .facets__reset {
@@ -193,11 +198,13 @@
 
 .facets__summary span {
   transition: text-decoration .3s ease;
+  color: var(--color-link-text);
 }
 
 .facets__summary:hover span {
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  //text-decoration: underline;
+  //text-underline-offset: 0.3rem;
+  color: var(--color-link-hover-text);
 }
 
 .disclosure-has-popup[open] > .facets__summary::before {
@@ -207,8 +214,10 @@
 .facets__summary > span {
 }
 
-.facets__summary .icon-caret {
+.facets__summary .icon-down {
   right: 0;
+  margin-left: auto;
+  width: 14px;
 }
 
 .facets__display {
@@ -290,6 +299,7 @@
 .facets__price .field-currency {
   align-self: center;
   margin-right: 0.6rem;
+  margin-top: -37px;
 }
 
 .facets__price .field__label {
@@ -319,21 +329,25 @@ button.facets__button {
 
 .active-facets__button {
   display: block;
-  margin-right: 1.5rem;
-  margin-top: 1.5rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
+  margin-right: .8rem;
+  margin-top: .8rem;
+  padding-left: 0;
+  padding-right: 0;
   text-decoration: none;
 }
 
 span.active-facets__button-inner {
-  border-radius: 2.6rem;
-  font-size: 1rem;
-  min-height: 0;
-  min-width: 0;
-  padding: 0.5rem 1rem;
+  border: 1px solid var(--color-secondary-button-background);
+  background: none;
+  padding: .4rem 1rem .6rem;
   display: flex;
-  align-items: stretch;
+  color: var(--color-secondary-button-background);
+  text-decoration: none;
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  line-height: 1.6rem;
+  border-radius: 0;
 }
 
 span.active-facets__button-inner:before,
@@ -354,7 +368,7 @@ span.active-facets__button-inner:after {
 
 @media screen and (min-width: 990px) {
   .active-facets__button {
-    margin-right: 1.5rem;
+    margin-right: .8rem;
   }
 
   .active-facets__button-wrapper *,
@@ -445,7 +459,6 @@ a.active-facets__button.focused .active-facets__button-inner,
 
 .facets-vertical .active-facets-vertical-filter {
   display: flex;
-  width: 100%;
   justify-content: space-between;
 }
 
@@ -642,7 +655,7 @@ details.menu-opening .mobile-facets__close svg {
   overflow-y: auto;
 }
 
-.mobile-facets__details[open] .icon-caret {
+.mobile-facets__details[open] .icon-down {
   transform: rotate(180deg);
 }
 
@@ -719,7 +732,6 @@ input.mobile-facets__checkbox {
   position: absolute;
   width: 1.6rem;
   height: 1.6rem;
-  position: absolute;
   left: 2.1rem;
   top: 1.2rem;
   z-index: 0;
@@ -754,7 +766,7 @@ input.mobile-facets__checkbox {
 }
 
 .mobile-facets__arrow,
-.mobile-facets__summary .icon-caret {
+.mobile-facets__summary .icon-down {
   margin-left: auto;
   display: block;
 }
@@ -802,7 +814,7 @@ input.mobile-facets__checkbox {
   right: -1rem;
 }
 
-.mobile-facets__sort .select .icon-caret {
+.mobile-facets__sort .select .icon-down {
   right: 0;
 }
 
@@ -845,7 +857,7 @@ input.mobile-facets__checkbox {
   display: block;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 767px) {
   .facets-vertical {
     display: flex;
   }
@@ -853,12 +865,19 @@ input.mobile-facets__checkbox {
   .facets-wrap-vertical {
     border: none;
     padding-left: 0;
+    ul {
+      padding-top: 2rem;
+      padding-bottom: 0;
+      label {
+        font-size: 1.4rem;
+      }
+    }
   }
     
   .facets__form-vertical {
     display: flex;
     flex-direction: column;
-    width: 26rem;
+    width: 30rem;
   }
 
   .facets__disclosure-vertical {
@@ -866,14 +885,18 @@ input.mobile-facets__checkbox {
   }
   
   .facets-vertical .facets__summary {
-    padding-top: 1.5rem;
+    padding-top: 1rem;
     margin-bottom: 0;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
+    padding-right: 0;
+    border-bottom: 1px solid var(--color-input-border);
+    font-size: 1.3rem;
+    text-transform: uppercase;
   }
   
   .facets__heading--vertical {
-    margin: 0 0 1.5rem 0;
-    font-size: 1.5rem;
+    margin: 0;
+    color: var(--color-white);
   }
 
   .facets__header-vertical {
@@ -882,11 +905,16 @@ input.mobile-facets__checkbox {
   }
   
   .facets__display-vertical {
-    padding-bottom: 1.5rem;
+    padding-bottom: 0;
   }
  
   .facets-vertical .facets-wrapper {
     padding-right: 3rem;
+    .facets-container {
+      padding: 20px;
+      background-color: var(--color-input-background);
+      box-shadow: 0 0 5px rgba(0,0,0, .1);
+    }
   }
 
   .facets-vertical .facets-wrapper--no-filters {
@@ -903,7 +931,8 @@ input.mobile-facets__checkbox {
 
   .facets-vertical-form {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .product-count-vertical {
@@ -926,7 +955,18 @@ input.mobile-facets__checkbox {
   }
 
   .facets-vertical .facets__price {
-    padding: 0.5rem 0.5rem 0.5rem 0;
+    padding: 0;
+    .field {
+      max-width: 50%;
+      flex: auto;
+      label {
+        margin-top: 10px;
+        font-size: 1.4rem;
+      }
+    }
+    input {
+      width: 100%;
+    }
   }
 
   .facets-vertical .facets__price .field:last-of-type {
@@ -934,7 +974,7 @@ input.mobile-facets__checkbox {
   }
 
   .facets-vertical .active-facets__button {
-    margin-bottom: 1.5rem;
+    margin-bottom: .8rem;
   }
 
   .no-js .facets-vertical .facet-filters.sorting {
@@ -952,15 +992,33 @@ input.mobile-facets__checkbox {
   }
 
   .facets-vertical .active-facets facet-remove:last-of-type {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
+    .active-facets__button-remove {
+      color: var(--color-white);
+    }
   }
 
   .facets-vertical .active-facets {
-    margin: 0;
     align-items: flex-start;
+    margin: 0 0 0 0;
+    width: auto;
+    display: block;
   }
 
-  .facets__disclosure-vertical[open] .facets__summary .icon-caret {
+  .active-facets-vertical-filter {
+    background-color: var(--color-dark);
+    color: var(--color-white);
+    padding: 1.5rem 2rem;
+    margin: -2rem -2rem .8rem -2rem;
+    align-items: center;
+    width: auto;
+  }
+
+  .facets-vertical facet-remove {
+    display: inline-block;
+  }
+
+  .facets__disclosure-vertical[open] .facets__summary .icon-down {
     transform: rotate(180deg);
   }
   
@@ -990,7 +1048,7 @@ input.mobile-facets__checkbox {
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 989px) {
+@media screen and (min-width: 767px) and (max-width: 989px) {
   .facets-vertical .active-facets__button {
     padding: 1rem;
     margin-bottom: 0;
