--- a/sections/main-collection-product.liquid
+++ b/sections/main-collection-product.liquid
@@ -258,10 +258,6 @@
             "id": "filter_type",
             "options": [
                 {
-                    "value": "horizontal",
-                    "label": "t:sections.main-collection-product-grid.settings.filter_type.options__1.label"
-                },
-                {
                     "value": "vertical",
                     "label": "t:sections.main-collection-product-grid.settings.filter_type.options__2.label"
                 },
@@ -270,7 +266,7 @@
                     "label": "t:sections.main-collection-product-grid.settings.filter_type.options__3.label"
                 }
             ],
-            "default": "horizontal",
+            "default": "vertical",
             "label": "t:sections.main-collection-product-grid.settings.filter_type.label",
             "info": "t:sections.main-collection-product-grid.settings.filter_type.info"
         },
