--- a/snippets/facets.liquid
+++ b/snippets/facets.liquid
@@ -508,7 +508,7 @@
                         </div>
                     {%- endif -%}
                     <div class="product-count light" role="status">
-                        <h2 class="product-count__text text-body">
+                        <h5 class="product-count__text text-body">
                             <span id="ProductCountDesktop">
                                 {%- if results.results_count -%}
                                     {{
@@ -524,7 +524,7 @@
                                     }}
                                 {%- endif -%}
                             </span>
-                        </h2>
+                        </h5>
                         <div class="loading-overlay__spinner">
                             <svg
                                 aria-hidden="true"
@@ -599,29 +599,36 @@
             <summary class="mobile-facets__open-wrapper focus-offset">
                 <span class="mobile-facets__open{% if filter_type == 'drawer' and enable_filtering == false %} medium-hide large-up-hide{% endif %}">
                     {% render 'icons-svg', icons: 'filter' %}
-                    <span class="mobile-facets__open-label button-label medium-hide large-up-hide">
-                        {%- if enable_filtering and enable_sorting -%}
-                            {{ 'products.facets.filter_and_sort' | t }}
-                        {%- elsif enable_filtering -%}
-                            {{ 'products.facets.filter_button' | t }}
-                        {%- elsif enable_sorting -%}
-                            {{ 'products.facets.sort_button' | t }}
-                        {%- endif -%}
+                    <span class="mobile-facets__open-label button-label h2 medium-hide large-up-hide">
+                        <label>
+                            {%- if enable_filtering and enable_sorting -%}
+                                {{ 'products.facets.filter_and_sort' | t }}
+                            {%- elsif enable_filtering -%}
+                                {{ 'products.facets.filter_button' | t }}
+                            {%- elsif enable_sorting -%}
+                                {{ 'products.facets.sort_button' | t }}
+                            {%- endif -%}
+                        </label>
                     </span>
-                    <span class="mobile-facets__open-label button-label small-hide">
-                        {%- if enable_filtering -%}
-                            {{ 'products.facets.filter_button' | t }}
-                        {%- endif -%}
+                    <span class="mobile-facets__open-label button-label h2 small-hide">
+                        <label>
+                            {%- if enable_filtering -%}
+                                {{ 'products.facets.filter_button' | t }}
+                            {%- endif -%}
+                        </label>
                     </span>
-                </span>
-                <span tabindex="0" class="mobile-facets__close mobile-facets__close--no-js">
-                    {% render 'icons-svg', icons: 'close' %}
                 </span>
             </summary>
             <facet-filters-form>
                 <form id="FacetFiltersFormMobile" class="mobile-facets">
+                    <div class="mobile-facets__overlay">
+                        <span class="visually-hidden">{{ 'sections.cart.close' | t }}</span>
+                    </div>
                     <div class="mobile-facets__inner gradient">
                         <div class="mobile-facets__header">
+                            <span tabindex="0" class="mobile-facets__close mobile-facets__close--no-js">
+                                {% render 'icons-svg', icons: 'close' %}
+                            </span>
                             <div class="mobile-facets__header-inner">
                                 <h3 class="mobile-facets__heading medium-hide large-up-hide">
                                     {%- if enable_filtering and enable_sorting -%}
@@ -668,7 +675,13 @@
                                             >
                                                 <summary class="mobile-facets__summary focus-inset">
                                                     <div>
-                                                        <span>{{ filter.label | escape }}</span>
+                                                        <span>
+                                                            {{- filter.label | escape -}}
+                                                            <span class="facets__selected no-js-hidden{% if filter.active_values.size == 0 %} hidden{% endif %}">
+                                                                ({{ filter.active_values.size }})</span
+                                                            ></span
+                                                        >
+
                                                         <span class="mobile-facets__arrow no-js-hidden">
                                                             {% render 'icons-svg', icons: 'next' %}
                                                         </span>
@@ -682,7 +695,7 @@
                                                     class="mobile-facets__submenu gradient"
                                                 >
                                                     <button
-                                                        class="mobile-facets__close-button link link--text focus-inset"
+                                                        class="mobile-facets__close-button button--link link link--text focus-inset"
                                                         aria-expanded="true"
                                                         type="button"
                                                     >
@@ -785,7 +798,7 @@
                                                     class="mobile-facets__submenu gradient"
                                                 >
                                                     <button
-                                                        class="mobile-facets__close-button link link--text focus-inset"
+                                                        class="mobile-facets__close-button button--link link link--text focus-inset"
                                                         aria-expanded="true"
                                                         type="button"
                                                     >
@@ -1062,7 +1075,7 @@
         class="product-count light{% if filter_type == 'vertical' or filter_type == 'horizontal' %} medium-hide large-up-hide{% endif %}"
         role="status"
     >
-        <h2 class="product-count__text text-body">
+        <h5 class="product-count__text text-body">
             <span id="ProductCount">
                 {%- if results.results_count -%}
                     {{ 'templates.search.results_with_count' | t: terms: results.terms, count: results.results_count }}
@@ -1075,7 +1088,7 @@
                     }}
                 {%- endif -%}
             </span>
-        </h2>
+        </h5>
         <div class="loading-overlay__spinner">
             <svg
                 aria-hidden="true"
@@ -1087,6 +1100,28 @@
                 <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
             </svg>
         </div>
+    </div>
+    <div class="main-collections__view">
+        <span>{{- 'products.facets.view_as' | t -}}</span>
+        <a
+            class="active main-collections__grid"
+            href="#"
+            title="{{- 'products.facets.list' | t -}}"
+            data-original-title="Grid"
+        >
+            {%- render 'icons-svg', icons: 'grid' -%}
+            {%- render 'icons-svg', icons: 'grid' -%}
+            {%- render 'icons-svg', icons: 'grid' -%}
+            {%- render 'icons-svg', icons: 'grid' -%}
+        </a>
+        <a
+            class="main-collections__list"
+            href="#"
+            title="{{- 'products.facets.grid' | t -}}"
+            data-original-title="List"
+        >
+            {%- render 'icons-svg', icons: 'list' -%}
+        </a>
     </div>
     {%- if filter_type == 'drawer' -%}
         <facet-filters-form class="facets facets-pill small-hide">
