--- a/sections/main-collection-product.liquid
+++ b/sections/main-collection-product.liquid
@@ -23,7 +23,7 @@
                 </aside>
             {%- endif -%}
 
-            <div class="product-grid-container" id="ProductGridContainer">
+            <div class="product-grid-container js-product-grid" id="ProductGridContainer">
                 {% comment %} Sort is the first tabbable element when filter type is vertical {% endcomment %}
                 {%- if section.settings.enable_sorting and section.settings.filter_type == 'vertical' -%}
                     <facet-filters-form class="facets facets-vertical-sort small-hide no-js-hidden">
@@ -99,10 +99,10 @@
                                 </div>
                             </div>
                         </form>
-                        <div class="main-collections__view">
+                        <grid-list-view class="main-collections__view mobile-style">
                             <span>{{- 'products.facets.view_as' | t -}}</span>
                             <a
-                                class="active main-collections__grid"
+                                class="active main-collections__grid js-grid-view"
                                 href="#"
                                 title="{{- 'products.facets.list' | t -}}"
                                 data-original-title="Grid"
@@ -113,14 +113,14 @@
                                 {%- render 'icons-svg', icons: 'grid' -%}
                             </a>
                             <a
-                                class="main-collections__list"
+                                class="main-collections__list js-list-view"
                                 href="#"
                                 title="{{- 'products.facets.grid' | t -}}"
                                 data-original-title="List"
                             >
                                 {%- render 'icons-svg', icons: 'list' -%}
                             </a>
-                        </div>
+                        </grid-list-view>
                     </facet-filters-form>
                 {%- endif -%}
                 {%- if collection.products.size == 0 -%}
@@ -169,7 +169,7 @@
         </div>
     {%- endpaginate -%}
 </div>
-
+<script src="{{ 'grid-list-view.js' | asset_url }}" defer="defer"></script>
 {% schema %}
 {
     "name": "t:sections.main-collection-product-grid.name",
